components/build-suite-test-component-git-source-kzhb/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: build-suite-test-application-uiht
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: build-suite-test-component-git-source-kzhb
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elbuild-suite-test-component-git-source-kzhb
  namespace: appstudio-e2e-test
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-build-suite-test-component-git-source-kzhb
    weight: null
status: {}
